--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@angular-devkit/build-angular": "^17.3.2",
     "@angular/cli": "^17.3.2",
     "@angular/compiler-cli": "^17.3.0",
+    "@ng-bootstrap/ng-bootstrap": "16.0.0-rc.2",
     "@types/jasmine": "~5.1.0",
+    "bootstrap": "^5.3.3",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
