--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/compiler-cli": "^17.3.0",
     "@ng-bootstrap/ng-bootstrap": "16.0.0-rc.2",
     "@types/jasmine": "~5.1.0",
+    "angular-cli-ghpages": "^2.0.0-beta.2",
     "bootstrap": "^5.3.3",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
