--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "publish": "ng deploy --base-href=https://MrMatthewLayton.github.io/sprintx/"
   },
   "private": true,
   "dependencies": {
